implement senders, rework interfaces
